# yaml-optimize

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
optimizer/: CMakeLists.txt
optimizer/inc/debug/: assert.h  exception.h  print.h
optimizer/inc/optimizer/: optimizer.h
optimizer/inc/utils/: io.h  node.h  platform.h  string.h
optimizer/src/: optimizer_impl.h
optimizer/src/debug/: exception.cpp
optimizer/src/optimizer/: optimizer.cpp
optimizer/src/utils/: io.cpp  node.cpp  string.cpp
src/: CMakeLists.txt  main.cpp  optimizer.cpp
src/debug/: assert.hpp  print.hpp
src/inc/debug/: assert.hpp  exception.hpp  print.hpp  throw.hpp
src/inc/optimizer/: optimizer.h  settings.h
src/inc/utils/: cli.hpp  io.hpp  node.hpp  platform.hpp
src/optimizer/: optimizer.hpp
src/utils/: cli.hpp  string.hpp
test/: CMakeLists.txt  simple.yaml
test/data/: config1024.yaml  config1024.yaml.result  config128.yaml  config128.yaml.result  limit.yaml  repetitive.yaml  repetitive.yaml.result  simple.yaml  simple.yaml.result  simple_merge.yaml.result
test/src/: full.perftest.cpp  full.unittest.cpp  limit.unittest.cpp  main.cpp  resolver.hpp
tools/: CMakeLists.txt
tools/yaml-optimize/: CMakeLists.txt  main.cpp
tools/yaml-optimize/inc/: cli.h
tools/yaml-optimize/src/: cli.cpp  main.cpp
tools/yaml-resolve/: CMakeLists.txt
tools/yaml-resolve/inc/: cli.h  resolver.h
tools/yaml-resolve/src/: cli.cpp  cli.hpp  main.cpp  resolver.cpp  resolver.hpp
